--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@types/react": "~18.0.27",
+    "@types/react": "~18.2.14",
     "expo": "^49.0.3",
     "expo-font": "~11.4.0",
-    "expo-status-bar": "~1.4.4",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "typescript": "^4.9.4"
+    "react-native": "0.72.3",
+    "typescript": "^5.1.3",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
